--- a/config/config_rand_for.yml
+++ b/config/config_rand_for.yml
@@ -29,8 +29,13 @@ model:
         - True
         - False
 optimization:
-  method: bayesian_optim  
-  n_trials: 1000
+  method: random_search  
+  n_trials: 50
+  cv: 1
+  n_iter: 100 # if the total space of paramaters is smaller than n_iter, it's better to use GridSearch rather than RandomSearch
+  random_state: 42
+  n_jobs: -1
+  verbose: 1
 data:
   train_path: data/train.csv
   test_path: data/test.csv
