--- a/config/config_svm.yml
+++ b/config/config_svm.yml
@@ -18,8 +18,13 @@ model:
       min: 1e-5
       max: 10
 optimization:
-  method: bayesian_optim  
+  method: grid_search  
   n_trials: 1000
+  cv: 3
+  n_iter: 5
+  random_state: 42
+  n_jobs: -1
+  verbose: 1
 data:
   train_path: data/train.csv
   test_path: data/test.csv
